--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "duplicate",
+    "name": "duplicate1234",
     "color": "ededed",
     "description": "This issue or Pull Request already exists"
   },
