--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,8 @@ name: test
 on: [push, pull_request]
 env:
   CI: true
+permissions:
+  contents: read
 jobs:
   test:
     name: "Test on Node.js ${{ matrix.node-version }}"
@@ -16,3 +18,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Install
+        run: yarn install
+      - name: Test
+        run: yarn run build
