--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           echo test, and deploy your project.
           
       - name: Add Labels      
-      - uses: christianvuerings/add-labels@v1
+        uses: christianvuerings/add-labels@v1
         with:
           labels: |
             minor release
