--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,5 @@ jobs:
         uses: christianvuerings/add-labels@v1.1
         with:
           labels: minor major
+        env:
+          GITHUB_TOKEN: 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
