--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           
-      - name: Add Labels major to #1
+      - name: Add Labels
         uses: christianvuerings/add-labels@v1.1
+        with:
+          labels: major to #1
         env:
           GITHUB_TOKEN: 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
