--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@
 name: CI
 
 on:
-  pull_request:
-    branches: [ main ] 
+  pull_request_review:
     types: [submitted]
 
   # Allows you to run this workflow manually from the Actions tab
