--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@
 name: CI
 
 on:
-  pull_request_review:
-    types: [submitted]
+  #pull_request_review:
+  #  types: [submitted]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -37,3 +37,13 @@ jobs:
           labels: major
         env:
           GITHUB_TOKEN: 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
+
+    - name: Labeler
+        uses: actions/labeler@v3
+        with:
+        # The GITHUB_TOKEN secret
+        # repo-token: # optional
+        # The path for the label configurations
+        # configuration-path: # optional, default is .github/labeler.yml
+        # Whether or not to remove labels when matching files are reverted
+        # sync-labels: # optional
