--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: CI
 on:
   #pull_request_review:
   #  types: [submitted]
-  issues:
-    types: [opened]
+  #issues:
+  #  types: [opened]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
