--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,11 +54,11 @@ jobs:
       #  env:
       #    GITHUB_TOKEN: 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
 
-      - name: label_sponsor
-        uses: JasonEtco/is-sponsor-label-action@v1
-        with:
-          label: Sponsor ❤️
-        env:
-          GITHUB_TOKEN: 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
+      #- name: label_sponsor
+      #  uses: JasonEtco/is-sponsor-label-action@v1
+      #  with:
+      #    label: Sponsor ❤️
+      #  env:
+      #    GITHUB_TOKEN: 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
           
           
